CSS: Fixed the buttons text alignment on HOME

--- a/css/ui.css
+++ b/css/ui.css
@@ -1643,6 +1643,7 @@ td.right,
 .button {
   display: inline-block;
   position: relative;
+  min-width: 80px;
   height: 32px;
   line-height: 32px;
   border-radius: 2px;
@@ -1650,7 +1651,6 @@ td.right,
   font-family: 'Roboto', Arial, Helvetica;
   color: #646464;
   text-transform: uppercase;
-  text-align: center;
 }
 .button.narrow { width: 60px }
 .button.grey {
@@ -1658,24 +1658,28 @@ td.right,
   padding: 0 10px;
   width: 100px;
   margin-right: 20px;
+  text-align: center;
 }
 .button.blue {
   background-color: #39c;
   color: #fff;
   padding: 0 10px;
   width: 132px;
+  text-align: center;
 }
 .button.red {
   background-color: red;
   color: #fff;
   padding: 0 10px;
   width: 132px;
+  text-align: center;
 }
 .button.green {
   background-color: #0f9d58;
   color: #fff;
   padding: 0 10px;
   width: 132px;
+  text-align: center;
 }
 .button.raised {
   transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
